src/main/resources/static/css/stylesheet.css
/* general */
body{
    width: 100%;
    height: 100%;
    /*text-align: center;*/
    padding: 10px 0 10px;
    overflow: auto;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    text-align: center;
    min-height: 100%;
    color: #454545;
}
#page{
    min-width: 1200px;
    min-height: 100%;
    height: 100%;
    width:100%;
    overflow: hidden;
    max-width: 935px;

}
div{
    overflow: auto;
}
form{
    text-align: left;
    display: inline-block;
    width: 100%;
}
a{
    cursor: pointer;
    text-decoration: none;
    color: #454545;
}
input:focus{
    outline: none;
}
button, .my_button, #add_choice_button, .submit{
    font-size: 100%;
    -webkit-transition-duration: 0.1s; /* Safari */
    transition-duration: 0.1s;
    border-radius: 14px;
    font-variant: small-caps;
    color: #8a8a8a;
    background-color: white;
    margin: auto;
    outline: none;
    border: 1px solid #8a8a8a;
}
button:hover, .my_button:hover, #add_choice_button:hover, .submit:hover{
    color: #FFFFFF;
    background-color: #A6A6A6;
    cursor: pointer;
}
ul.ba {
    list-style-type: none;
}
/*login page*/
#main_content{
    width: 90%;
    padding: 5%;
    overflow: hidden;
    display: table;
    margin: 0 auto;
}
.login_background{
    width: 100%;
    height: 100%;
    text-align: center;
    vertical-align: center;
}

.login_block{
    justify-content: center;
    max-width: 350px;
    margin-top: 30px;
    border: 1px solid #e6e6e6;
    border-radius: 1px;
    padding: 10px;
    display: inline-block;
    min-width: 372px;
    min-height: 308px;
    overflow: hidden;
}

.login_inner_area{
    padding: 20px;
    margin-top: 20px;
}
.login_input_area{
    border: 1px solid #efefef;
    text-align: center;
    margin: 15px;
}

.login_input_area input{
    border: 0px solid;
    letter-spacing: normal;
    word-spacing: normal;
    text-transform: none;
    text-indent: 0px;
    text-shadow: none;
    display: inline-block;
    text-align: start;
    height: 25px;
    width: 100%;
}
#login_button button{
    padding: 3px 15px;
}

.login_logo {
    margin-bottom: 20px;
    width: 100%;
}

.login_logo > img {
    width: 100%;
}

.important_message {
    color: #ed4956;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-left: 15px;
    margin-right: 15px;
    text-align: center;
    font-size: 13px;

}


.top_banner {
    width: 100%;
    max-height: 80px;
    border-bottom: 2px solid #bfbfbf;
    overflow: auto;
    min-widows: 1500px;
}

.site_title {
    font-family:"Times New Roman", Times, serif;
    font-style: normal;
    font-size: 40px;
    font-variant: small-caps;
    float: left;
    margin-left: 30px;
    display: block;
}
.logo_container{
    float: right;
    width: 20%;
    padding: 3px;
    margin-right: 5%;
    overflow: hidden;
}
.logo_container > img{
    height: 65px;

}
/*EditQuestion*/
.edit_question_background{
    background-color: #A6A6A6;
}
.edit_question_main{
    background-color: white;
    border-radius: 14px;
    width: auto;
}

.input_field{
    margin-top: 10px;
    margin-bottom: 10px;
}
.input_field_name{
    font-variant: small-caps;
    color: #8a8a8a;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
}
#permission{
    font-variant: small-caps;
    color: #525252;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
}
#rich_text_editor_container{
    width: 80%;
    padding: 5px;
}
#edit_area{
    height: 150px;
}
.question_input_box{
    text-align: left;
    width: 100%;
}
.choices .each_choice{
    margin-top: 20px;
    margin-bottom: 20px;
}
.each_choice:hover{
}
.each_choice > textarea{
    width: 50%;
    height: 12pt;
}
.delete_choice_button{
    color: #8a8a8a;
    cursor: pointer;
    padding: 4px;
    display: inline-block;
    margin: 0.5%;
}
.delete_choice_button:hover{
    color: red;
}
.submit{
    margin-top: 5%;
    font-size: 15pt;
}

.tags {
    list-style: none;
    margin: 0;
    overflow: hidden;
    padding: 0;
}

.tags li {
    float: left;
}

.tag {
    background: #FFFFFF;
    border-radius: 3px 0 0 3px;
    color: #525252;
    display: inline-block;
    height: 26px;
    line-height: 26px;
    padding: 0 20px 0 20px;
    position: relative;
    margin: 0 10px 10px 0;
    text-decoration: none;
    -webkit-transition: color 0.2s, background-color 0.2s;
    transition: color 0.2s, background-color 0.2s;

    -webkit-transition: width 0.2s;
    transition: width 0.2s;
}

.tag::before {
    background: #fff;
    border-radius: 10px;
    box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
    content: '';
    height: 6px;
    left: 10px;
    position: absolute;
    width: 6px;
    top: 10px;
}
.tag::after {
    background: #fff;
    border-bottom: 13px solid transparent;
    border-left: 10px solid #FFFFFF;
    border-top: 13px solid transparent;
    content: '';
    position: absolute;
    right: 0;
    top: 0;
}

.tag:hover {
    background-color: #A6A6A6;
    color: white;
}
.tag:hover > .delete_tag_button{
    color: red;
    visibility: visible;
    opacity: 1;
    position: static;;
}

.tag:hover::after {
    border-left-color: #A6A6A6;
}
.delete_tag_button{
    background-color: transparent;
    border: none;
    color: red;
    height: 100%;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    font-size: 16px;
    -webkit-transition: color 0.2s;
    opacity: 0;
    position:absolute;
    visibility: hidden;
    -webkit-transition: opacity 0.2s, visibility 0.2s;
    transition: opacity 0.2s, visibility 0.2s;
}
.delete_tag_button:hover{
    font-weight: 500;
    color: red;
}
#tag_template{
    display:none;
}
.tag > textarea{
    display: none;
}
.each_choice input[type="radio"]{
    display: none;
}

.each_choice  label{
    color: #8a8a8a;
    display: inline-block;
    vertical-align: middle;
    margin: 5px;
    cursor: pointer;
}
.each_choice label:hover{
    color: green;
}
.each_choice input[type="radio"]:checked ~ i{
    color: green;
}

/*Side bar*/
.side_bar{
    /*height: 80%;*/
    /*width: 20%;*/
    /*position: fixed;*/
    z-index: 1;
    left: 0;
    /*background-color: #111; */
    overflow-x: hidden;
    display:table-cell;
    float: left;
}
.side_menu{
    /*height: 100%;*/
    margin: 20px;
    overflow: visible;
}
.side_menu a{
    padding-left:15px;
    padding-right:15px;
    overflow: visible;
}

.menu_options{
    padding: 15px 10px;
    width: 100%;
    height: 8%;
    font-variant: small-caps;
    text-align: left;
    cursor: pointer;
    border: none;
    border-radius: 10px;
    color: #8a8a8a;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    font-size: 125%;
    font-weight: 500;
    background-color: #FFFFFF;
    -webkit-transition-duration: 0.2s; /* Safari */
    transition-duration: 0.2s;
    /*line-height: 10%;*/
    vertical-align: middle;
    overflow: visible;
}
.menu_options:hover{
    background-color: #A6A6A6;
    color: #FFFFFF;
}
.menu_options:active{
    background-color: #7D7C7C;
}
.content_area{
    padding: 3%;
    overflow-x: hidden;;
    height: 100%;
    /*width: 100%;*/
    display: table-cell;
    vertical-align: top;
    margin: 0 auto;
}

.current_option{
    color: #000000;
    background-color: #FFFFFF;
}

.hidden_content{
    display: none;
}
/*question search*/
#search_bar{
    width: 90%;
    height: 30pt;
    font-size: 16pt;
    /*background-color: transparent;*/
    border: none;
    border-radius: 17pt;
    background-color: #dbdbdb;
    padding: 2pt 5% 2pt 5%;
}
#search_bar::placeholder{
    color: #bfbfbf;
    opacity: 1;
}
#search_bar::-ms-input-placeholder{
    color: #bfbfbf;
}
#search_bar_container{
    margin: 5% auto 0 auto;
    padding: 10px 20px 10px 20px;
    width: 80%;
}
#search_methods{
    margin-top:5%;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    font-variant: small-caps;
}
#search_methods > button{
    border: none;
    font-size: 125%;
    font-weight: 500;
    -webkit-transition-duration: 0.4s; /* Safari */
    transition-duration: 0.4s;
    border-radius: 14px;
    font-variant: small-caps;
}
#search_methods > button:hover{
    color: #FFFFFF;
    background-color: #A6A6A6;
}
#search_methods > .selected{
    color: #FFFFFF;
    background-color: #A6A6A6;
}
#search_methods > .not_selected{
    color: #8a8a8a;
    background-color: #FFFFFF;
}
.search_method_button{
    font-variant: small-caps;
}
#search_results_container{
    margin: 0 auto 0 auto;
    padding: 10px 20px 10px 20px;
    width: 90%;
}
.visualization_for_debug{
    border: 1px solid black;
}

.result_question_container{
    text-align: left;
    padding: 10px;
    border-radius: 15px;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    color: #525252;
    -webkit-transition-duration: 0.1s; /* Safari */
    transition-duration: 0.1s;
}
.result_question_container:hover .action_buttons{
    visibility: visible;
}
.result_question_container:hover{
    background-color: #f2f2f2;
}
.sr_title{
    font-variant: small-caps;
    color: #8a8a8a;
}
.srq_body{
    margin-top: 2.5%;
}
.srq_id{
    font-variant: small-caps;
}
.srq_categories{
}

.q-code{
    width: calc(50%);
    float: left;
    text-align: left;
}
.difficulty_level{
    width: calc(50%);
    float: right;
    text-align: right;
}
.action_options{
}
.action_buttons{
    color: #8a8a8a;
    float:right;
    padding: 4px;
    display: inline-block;
    margin: 0.5%;
    cursor: pointer;
}
.action_buttons:hover{
    color: #525252;
}
.rq_choices_container{
}

.rq_choices_container > li:before{
    content: counter(customlistcounter, upper-alpha) ") ";
}
.rq_choices_container > li{
    counter-increment: customlistcounter;
}
ol.rq_choices_container:first-child {
    counter-reset: customlistcounter;
}


.rq_tags_list a{
    display: inline-block;
    color: #525252;
}
.rq_tags_list a:hover{
    font-weight: bolder;
}
.rq_choices_container{
    display: none;
    list-style-type: none;
}

.rq_magnify_button{
    display: inline-block;
}
.srq_answer{

}
.show_answer{
    font-variant: small-caps;
    color: #8a8a8a;
    cursor: pointer;
}
.hide_answer{
    color:#3ACE42;
    display:none;
    cursor: pointer;
}
.magnified_question_container {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
.magnified_question_content{
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
}

/* The Close Button */
.close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

/*Account Setting*/

.title{
    text-align: left;
    font-size: 18px;

}
.account_setting_input_area{
    color: #8a8a8a;
}

